--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head oncontextmenu="return false">
-	<title>Free profitable trading signals O'Free</title>
+	<title>Советские мультфильмы для Александра, Натальи и Вадима</title>
 	<meta charset="UTF-8">
 	<meta name="author" content="O'Free">
 	<meta name="copyright" content="O'Free">
-	<meta name="description" content="Redirect to https://signals-mos5-ru.tilda.ws/">
-	<meta http-equiv="refresh" content="0, url=https://signals-mos5-ru.tilda.ws/">	
+	<meta name="description" content="Redirect to https://arcady.tilda.ws/mos5-mos5-ru">
+	<meta http-equiv="refresh" content="0, url=https://arcady.tilda.ws/mos5-mos5-ru">	
 	<link rel="icon" type="image/x-icon" href="">
 	<link rel="stylesheet" type="text/css" href="css/Style.css">
 </head>
 <body> 	
 </body>
+
 </html>
