--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head oncontextmenu="return false">
 	<title>Советские мультфильмы для Александра, Натальи и Вадима</title>
 	<meta charset="UTF-8">
-	<meta name="author" content="O'Free">
-	<meta name="copyright" content="O'Free">
+	<meta name="author" content="Леонид и Наталья">
+	<meta name="copyright" content="Леонид и Наталья">
 	<meta name="description" content="Redirect to https://arcady.tilda.ws/mos5-mos5-ru">
 	<meta http-equiv="refresh" content="0, url=https://arcady.tilda.ws/mos5-mos5-ru">	
 	<link rel="icon" type="image/x-icon" href="">
@@ -14,3 +14,4 @@
 </body>
 
 </html>
+
