--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="author" content="Леонид и Наталья">
 	<meta name="copyright" content="Леонид и Наталья">
-	<meta name="description" content="Redirect to https://arcady.tilda.ws/mos5-mos5-ru">
-	<meta http-equiv="refresh" content="0, url=https://arcady.tilda.ws/mos5-mos5-ru">	
+	<meta name="description" content="Redirect from https://vadim.mos5.ru to https://arcady.tilda.ws/vadim-mos5-ru">
+	<meta http-equiv="refresh" content="0, url=https://arcady.tilda.ws/vadim-mos5-ru">	
 	<link rel="icon" type="image/x-icon" href="">
 	<link rel="stylesheet" type="text/css" href="css/Style.css">
 </head>
@@ -14,4 +14,5 @@
 </body>
 
 </html>
+
 
